support/crown/tests/ui/unrooted_must_root_struct_field.stderr
error: Type must be rooted, use #[crown::unrooted_must_root_lint::must_root] on the struct definition to propagate
 --> $DIR/unrooted_must_root_struct_field.rs:3:12
  |
3 | struct Bar(Foo);
  |            ^^^
  |
  = note: `#[deny(crown::unrooted_must_root)]` on by default

error: aborting due to previous error

